fixed media query for nav items being too small for desktop

--- a/src/layout/Header.scss
+++ b/src/layout/Header.scss
@@ -57,8 +57,8 @@ header {
     nav {
       order: 1;
       flex-basis: 100%;
-      justify-content: center;
-      gap: 18px;
+      justify-content: space-between;
+      gap: 2vw;
     }
 
     .header-logo {
@@ -67,10 +67,6 @@ header {
 
     > *:last-child {
       order: 3;
-    }
-
-    a {
-      font-size: 14px;
     }
   }
 }
